--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -7,7 +7,7 @@
   "heroTitle": "Site for Sale in Daruszentmiklós",
   "heroLead": "Perfect location, long-term value growth potential, and extensive development opportunities across more than <strong>7 hectares</strong>.",
   "btnDetails": "Details",
-  "btnContact": "Contact",
+  "btnContact": "Contact V1",
   "locationTitle": "Location",
   "locationSub": "Strategic position in the heart of Hungary",
   "locationDesc": "The industrial development plot is located on the <strong>border of Fejér and Tolna counties</strong>, in the outskirts of Daruszentmiklós. The <strong>M6 motorway</strong> exit is <strong>directly next to the property</strong>, currently accessible via an internal gravel road of only 500 m.",
