--- a/assets/lang/hu.json
+++ b/assets/lang/hu.json
@@ -5,9 +5,9 @@
   "navDocs": "Dokumentumok",
   "navContact": "Kapcsolat",
   "heroTitle": "Eladó Telek Daruszentmiklóson",
-  "heroLead": "Tökéletes elhelyezkedés, hosszútávú értéknövekedési potenciál és széleskörű fejlesztési lehetőségek több mint <strong>7 hektáron</strong>.",
+  "heroLead": "V1 Tökéletes elhelyezkedés, hosszútávú értéknövekedési potenciál és széleskörű fejlesztési lehetőségek több mint <strong>7 hektáron</strong>.",
   "btnDetails": "Részletek",
-  "btnContact": "Kapcsolat V1",
+  "btnContact": "Kapcsolat",
   "locationTitle": "Lokáció",
   "locationSub": "Stratégiai elhelyezkedés az ország szívében",
   "locationDesc": "Az ipari fejlesztési telek <strong>Fejér és Tolna megye határán</strong>, Daruszentmiklós külterületén helyezkedik el. Az <strong>M6-os autópálya</strong> felhajtója <strong>közvetlenül a telek mellett</strong> található, amely jelenleg egy belső salakos, mindössze 500m hosszú útról érhető el.",
