--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -5,7 +5,7 @@
   "navDocs": "Documents",
   "navContact": "Contact",
   "heroTitle": "Site for Sale in Daruszentmiklós",
-  "heroLead": "V1 Perfect location, long-term value growth potential, and extensive development opportunities across more than <strong>7 hectares</strong>.",
+  "heroLead": "Perfect location, long-term value growth potential, and extensive development opportunities across more than <strong>7 hectares</strong>.",
   "btnDetails": "Details",
   "btnContact": "Contact",
   "locationTitle": "Location",
