--- a/assets/lang/hu.json
+++ b/assets/lang/hu.json
@@ -5,7 +5,7 @@
   "navDocs": "Dokumentumok",
   "navContact": "Kapcsolat",
   "heroTitle": "Eladó Telek Daruszentmiklóson",
-  "heroLead": "V1 Tökéletes elhelyezkedés, hosszútávú értéknövekedési potenciál és széleskörű fejlesztési lehetőségek több mint <strong>7 hektáron</strong>.",
+  "heroLead": "Tökéletes elhelyezkedés, hosszútávú értéknövekedési potenciál és széleskörű fejlesztési lehetőségek több mint <strong>7 hektáron</strong>.",
   "btnDetails": "Részletek",
   "btnContact": "Kapcsolat",
   "locationTitle": "Lokáció",
