--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -64,17 +64,18 @@
   "footerTitle": "SITE FOR SALE DARUSZENTMIKLÓS",
   "footerPrivacy": "Privacy Policy",
   "footerCookies": "Cookies",
-  "cardMeta1": "1. Warehouse:",
-  "cardMeta2": "2. Building:",
-  "cardMeta3": "3. Stable:",
+  "cookiesBannerText": "This website uses cookies. <a href='Cookies.html' style='color:#fff;text-decoration:underline;'>Details</a>",
+  "cookiesAcceptBtn": "Accept",
+  "cardMeta1": "1. Metal Workshop:",
+  "cardMeta2": "2. Metal Workshop:",
+  "cardMeta3": "3. Metal Workshop:",
   "cardMeta4": "4. Metal Workshop:",
-  "cardMeta5": "5. Metal Workshop:",
-  "cardMeta6": "6. Metal Workshop:",
-  "cardMeta7": "7. Metal Workshop:",
-  "cardMeta8": "8. Wood Workshop:",
-  "cardMeta9": "9. Wood Workshop:",
-  "cardMeta10": "10. Gate",
-  "cardMeta11": "11. Road",
+  "cardMeta5": "5. Wood Workshops + Stable:",
+  "cardMeta6": "6. Weigh house:",
+  "cardMeta7": "7. Warehouse:",
+  "cardMeta8": "8. Reception:",
+  "cardMeta9": "9. Gate:",
+  "cardMeta10": "10. Road:",
   "formSending": "Sending message...",
   "formSuccess": "Message sent successfully! We will contact you soon.",
   "formError": "An error occurred while sending the message. Please try again.",
