--- a/assets/lang/hu.json
+++ b/assets/lang/hu.json
@@ -64,17 +64,18 @@
   "footerTitle": "ELADÓ TELEK DARUSZENTMIKLÓS",
   "footerPrivacy": "Adatkezelés",
   "footerCookies": "Cookies",
-  "cardMeta1": "1. Raktár:",
-  "cardMeta2": "2. Épület:",
-  "cardMeta3": "3. Istálló:",
+  "cookiesBannerText": "Ez a weboldal sütiket használ. <a href='Cookies.html' style='color:#fff;text-decoration:underline;'>Részletek</a>",
+  "cookiesAcceptBtn": "Elfogadom",
+  "cardMeta1": "1. Lakatosüzem:",
+  "cardMeta2": "2. Lakatosüzem:",
+  "cardMeta3": "3. Lakatosüzem:",
   "cardMeta4": "4. Lakatosüzem:",
-  "cardMeta5": "5. Lakatosüzem:",
-  "cardMeta6": "6. Lakatosüzem:",
-  "cardMeta7": "7. Lakatosüzem:",
-  "cardMeta8": "8. Faipari üzem:",
-  "cardMeta9": "9. Faipari üzem:",
-  "cardMeta10": "10. Kapu",
-  "cardMeta11": "11. Út",
+  "cardMeta5": "5. Faipari üzemek és istálló:",
+  "cardMeta6": "6. Mázsaház:",
+  "cardMeta7": "7. Raktár:",
+  "cardMeta8": "8. Porta:",
+  "cardMeta9": "9. Kapu:",
+  "cardMeta10": "10. Út:",
   "formSending": "Üzenet küldése folyamatban...",
   "formSuccess": "Üzenet sikeresen elküldve! Hamarosan felvesszük Önnel a kapcsolatot.",
   "formError": "Hiba történt az üzenet küldésekor. Kérjük, próbálja újra.",
