--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -64,7 +64,7 @@
   "footerTitle": "SITE FOR SALE DARUSZENTMIKLÓS",
   "footerPrivacy": "Privacy Policy",
   "footerCookies": "Cookies",
-  "cookiesBannerText": "This website uses cookies. <a href='Cookies.html' style='color:#fff;text-decoration:underline;'>Details</a>",
+  "cookiesBannerText": "This website uses cookies. <a href='cookies.html' style='color:#fff;text-decoration:underline;'>Details</a>",
   "cookiesAcceptBtn": "Accept",
   "cardMeta1": "1. Metal Workshop:",
   "cardMeta2": "2. Metal Workshop:",
