--- a/assets/lang/hu.json
+++ b/assets/lang/hu.json
@@ -64,7 +64,7 @@
   "footerTitle": "ELADÓ TELEK DARUSZENTMIKLÓS",
   "footerPrivacy": "Adatkezelés",
   "footerCookies": "Cookies",
-  "cookiesBannerText": "Ez a weboldal sütiket használ. <a href='Cookies.html' style='color:#fff;text-decoration:underline;'>Részletek</a>",
+  "cookiesBannerText": "Ez a weboldal sütiket használ. <a href='cookies.html' style='color:#fff;text-decoration:underline;'>Részletek</a>",
   "cookiesAcceptBtn": "Elfogadom",
   "cardMeta1": "1. Lakatosüzem:",
   "cardMeta2": "2. Lakatosüzem:",
